--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="screen chat-screen">
             <div class="header">
-                <div class="logo">Chatroom</div>
+                <div class="logo">Chatrooms</div>
                 <button id="exit-chat">Exit</button>
             </div>
             <div class="messages">
