--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>this is chatRoom</h1>
     <div class="app">
         <div class="screen join-screen active">
             <div class="form">
